deploy/overlays/prod/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperclip
spec:
  host: "paperclip.<CLUSTER_APPS_DOMAIN>"
